# Woodix

./: Cargo.toml  Makefile  bootloader_simple.sh  bootloader_starter.sh  bootloader_test.sh  build.rs  build_kernel.sh  build_simple_test_kernel.sh  build_with_asm_bootloader.sh  clean_qemu_test.sh  fix_bootloader.sh  fix_kernel_file.sh  fix_kernel_structure.sh  flatpak_qemu.sh  i686-custom.json  linker.ld  quick_test.sh  run.sh  run.sh.bak  setup.sh  setup_esp.sh
.cargo/: config.toml
esp/: KERNEL  NvVars  startup.nsh
esp/EFI/BOOT/: BOOTX64.EFI
esp/EFI/Boot/: BOOTX64.EFI  Bootx64.efi  KERNEL.ELF  bootx64.efi
esp/EFI/WOODIX/: VGA_TEST1.ELF  VGA_TEST2.ELF  VGA_TEST3.ELF
esp/boot/grub/: grub.cfg
logs/: log.txt
src/: main.rs
src/bootloader/: Makefile  Makefile.asm  Makefile.minimal  bootloader.asm  main.c  minimal_bootloader.asm  test_kernel.asm
src/kernel/: debug_port.rs  linker.ld  main.rs
src/kernel/vga_utils/: mod.rs  text_code.rs  vga_color_code.rs  vga_colors.rs  vga_writter.rs
