[package]
name = "Woodix"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = "0.24.0"
uefi-services = "0.21.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]

[build]
target = "x86_64-unknown-uefi"
