[package]
name = "woodix"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[lib]
path = "src/kernel/main.rs"  # Point back to main.rs, not simple_main.rs
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[profile.dev]
panic = "abort"
# Add these for better freestanding compatibility
debug = true
lto = "thin"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[lints.rust]
dead_code = "allow"      # Allows unused code during early development
