[package]
name = "woodix"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
debug = false  # Disable debug info
opt-level = 1  # Basic optimizations

[profile.release]
panic = "abort"
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1
debug = false

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[lints.rust]
dead_code = "allow"      # Allows unused code during early development

[[bin]]
name = "woodix"
path = "src/kernel/main.rs"
test = false
doctest = false
bench = false